--- a/index.html
+++ b/index.html
@@ -1,37 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Age calculator app</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="index.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Age calculator app</title>
 
-  Day
-  DD
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
 
-  Month
-  MM
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
 
-  Year
-  YYYY
+  <body>
+    <div class="container">
+      <form>
+        <div class="inputList">
+          <div class="formContent">
+            <label for="dob_day">Day</label>
+            <input type="number" placeholder="DD" />
+            <p class="error errorDay notDisplay">Must be a valid day</p>
+          </div>
+          <div class="formContent">
+            <label for="dob_month">Month</label>
+            <input id="dob_month" type="number" placeholder="MM" />
+            <p class="error errorMonth notDisplay">Must be a valid month</p>
+          </div>
+          <div class="formContent">
+            <label for="dob_year">Year</label>
+            <input id="dob_year" type="number" placeholder="YYYY" />
+            <p class="error errorYear notDisplay">Must be a valid year</p>
+          </div>
+        </div>
 
-  -- years
-  -- months
-  -- days
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <div class="submitSection">
+
+          <HR />
+          <button type="submit" onclick="calculateAge(event)"><img src="assets/images/icon-arrow.svg" alt="submitButton"></button>
+        </div>
+      </form>
+
+      <div class="resultSection">
+        <div class="yearResult">
+          <span>--</span> years
+        </div>
+        <div class="monthResult">
+          <span>--</span> months
+        </div>
+        <div class="dayResult">
+          <span>--</span> days
+        </div>
+      </div>
+    </div>
+
+    
+
+    <!-- <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div> -->
+  </body>
 </html>
