--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
           <div class="formContent">
             <label for="dob_year">Year</label>
-            <input id="dob_year" type="number" placeholder="YYYY" />
+            <input min="100"  id="dob_year" type="number" placeholder="YYYY" />
             <p class="error  notDisplay" id="errorYear">Must be a valid year</p>
           </div>
         </div>
