--- a/index.html
+++ b/index.html
@@ -71,13 +71,14 @@
         </div>
       </div>
 
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Charbel SONON</a>.
-      </div>
+      
     </div>
+    <!-- <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="cutt.ly/charbeldev">Charbel SONON</a>.
+    </div> -->
 
     
 
