--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 
       
     </div>
-    <!-- <div class="attribution">
+    <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="cutt.ly/charbeldev">Charbel SONON</a>.
-    </div> -->
+    </div>
 
     
 
